[gd_scene load_steps=9 format=3 uid="uid://yrv80x2vkau4"]

[ext_resource type="Script" uid="uid://bdtfvns68uklu" path="res://code/player.gd" id="1_am71v"]
[ext_resource type="PackedScene" uid="uid://bgkoeuyrxohi4" path="res://Assets/Ben10.2.fbx" id="2_2qkwl"]
[ext_resource type="Script" uid="uid://bl3t2mllel7rx" path="res://code/camera_controller.gd" id="2_6agyq"]
[ext_resource type="Texture2D" uid="uid://ds1tevhy8k5yv" path="res://icon.svg" id="3_8xumb"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_e6s5b"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_d4y06"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jh7gh"]
bg_color = Color(0.541176, 0.152941, 0.160784, 0.988235)
skew = Vector2(0.7, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uxksl"]
bg_color = Color(0.632955, 0.504483, 0.0926141, 1)
skew = Vector2(0.7, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[node name="Ben" type="CharacterBody3D"]
script = ExtResource("1_am71v")

[node name="Ben10_2" parent="." instance=ExtResource("2_2qkwl")]
transform = Transform3D(-0.83, 0, -7.25609e-08, 0, 0.83, 0, 7.25609e-08, 0, -0.83, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_e6s5b")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CapsuleMesh_d4y06")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.68354, 0)
script = ExtResource("2_6agyq")

[node name="Camera3D" type="Camera3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.264455)
doppler_tracking = 2

[node name="RayCast3D" type="RayCast3D" parent="CameraController"]
transform = Transform3D(4.88697e-08, 0, 1, 0, 1, 0, -1.6398, 0, 2.98023e-08, 0, 0, 0)
target_position = Vector3(1.5, 0, 0)
collision_mask = 33280
collide_with_areas = true

[node name="CameraControllerAnchor" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Main_Ui" type="CanvasLayer" parent="."]
layer = 2
follow_viewport_enabled = true

[node name="top-right-ui" type="VBoxContainer" parent="Main_Ui"]
layout_direction = 2
anchors_preset = -1
anchor_left = 0.698438
anchor_top = 0.0277778
anchor_right = 0.988542
anchor_bottom = 0.212963
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 10
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Energy" type="ProgressBar" parent="Main_Ui/top-right-ui"]
layout_mode = 2
size_flags_vertical = 15
theme_override_font_sizes/font_size = 1
theme_override_styles/background = SubResource("StyleBoxFlat_jh7gh")
theme_override_styles/fill = SubResource("StyleBoxFlat_uxksl")
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="Main_Ui/top-right-ui/Energy"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0437406
anchor_top = 0.129032
anchor_right = 0.12368
anchor_bottom = 0.870968
grow_vertical = 2
text = "Energy"
metadata/_edit_use_anchors_ = true

[node name="Courage" type="ProgressBar" parent="Main_Ui/top-right-ui"]
layout_mode = 2
size_flags_vertical = 15
theme_override_font_sizes/font_size = 1
theme_override_styles/background = SubResource("StyleBoxFlat_jh7gh")
theme_override_styles/fill = SubResource("StyleBoxFlat_uxksl")
show_percentage = false

[node name="Label" type="Label" parent="Main_Ui/top-right-ui/Courage"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0437406
anchor_top = 0.129032
anchor_right = 0.12368
anchor_bottom = 0.870968
grow_vertical = 2
text = "Courage"
metadata/_edit_use_anchors_ = true

[node name="test" type="Label" parent="Main_Ui/top-right-ui"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "test"
vertical_alignment = 1

[node name="hand" type="Sprite2D" parent="Main_Ui"]
modulate = Color(0.0588235, 0.0588235, 0.0588235, 1)
top_level = true
position = Vector2(1726, 936)
rotation = -1.89325
scale = Vector2(1.90625, 4.09375)
skew = 0.815069
texture = ExtResource("3_8xumb")

[node name="center" type="ColorRect" parent="Main_Ui"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -6.0
offset_right = 2.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2

[node name="center2" type="ColorRect" parent="Main_Ui"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -6.0
offset_right = 2.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.56761
pivot_offset = Vector2(2, 6)

[node name="Intro" type="CanvasLayer" parent="."]
visible = false

[node name="Instruction" type="Label" parent="Intro"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -116.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "Use WASD keys to move around"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
